--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 
 frontend/* linguist-vendored
-frontend/* linguist-documentation
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
